<resources>
    <string name="app_name">Smart Home</string>
    <string name="login_fragment">Login</string>
    <string name="about">ABOUT</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="devices">DEVICES</string>
    <string name="placeholder">PLACEHOLDER</string>

    <!-- User -->
    <string name="user">USER</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>

    <!-- Relay -->
    <string name="ip">IP</string>
    <string name="title_activity_details_relay">DetailsRelayActivity</string>


    <!-- Menu -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="on">ON</string>
    <string name="edit_relay">Edit Relay</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="mac">MAC Address</string>
    <string name="add_description">Button used for adding new stuff</string>
    <string name="edit_light">Edit Light</string>
    <string name="add_device_fab_content_description">Fab to start Activity for adding new device</string>
</resources>