<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_devices"
        android:title="@string/devices"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_login"
        android:title="@string/login"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/menu_user"
        android:title="@string/user"
        app:showAsAction="ifRoom"/>

</menu>