<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/edit_relay" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="@dimen/margin_xl"
        style="@style/Widget.Design.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip"
        android:layout_marginTop="@dimen/margin_m"
        style="@style/Widget.Design.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/deleteColor"
            android:layout_marginEnd="30dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/confirm"
            android:backgroundTint="@color/actionDarkBackground"
            android:textColor="@color/colorAccent"
            />

    </LinearLayout>
</LinearLayout>
