<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:layout_weight="1">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="true"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/details_light_topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/edit_light" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_below="@id/details_light_topBar"
        android:layout_marginTop="@dimen/margin_s"
        style="@style/Widget.Design.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mac_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mac"
        android:layout_below="@id/name_layout"
        android:layout_marginTop="@dimen/margin_m"
        style="@style/Widget.Design.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.github.antonpopoff.colorwheel.ColorWheel
        android:id="@+id/color_wheel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mac_layout"
        android:layout_marginTop="@dimen/margin_m" />

    <com.github.antonpopoff.colorwheel.gradientseekbar.GradientSeekBar
        android:id="@+id/gradient_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/color_wheel"
        app:gsb_endColor="@color/white"
        app:gsb_offset="1"
        app:gsb_orientation="horizontal" />



</RelativeLayout>

<com.google.android.material.bottomappbar.BottomAppBar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:backgroundTint="@color/transparent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:layout_marginEnd="@dimen/margin_s"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:layout_marginStart="@dimen/margin_s"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />

    </LinearLayout>

</com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
