<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/margin_l">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:errorEnabled="true"
                android:layout_marginTop="@dimen/margin_l"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                android:layout_marginTop="@dimen/margin_m"
                app:layout_constraintTop_toBottomOf="@id/username_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/buttons_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_l"
                app:layout_constraintTop_toBottomOf="@id/password_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    android:layout_width="@dimen/button_m"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textAlignment="center"
                    android:layout_marginBottom="@dimen/margin_s"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register"
                    android:layout_width="@dimen/button_m"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textAlignment="center"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_bar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:showAnimationBehavior="inward"
                app:indicatorDirectionLinear="leftToRight"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="@id/buttons_container"
                app:layout_constraintLeft_toLeftOf="@id/buttons_container"
                app:layout_constraintRight_toRightOf="@id/buttons_container"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>


